Fix for safari bug on overflow + border-radius + transform

--- a/components/common/ProfilePic/profilePic.module.scss
+++ b/components/common/ProfilePic/profilePic.module.scss
@@ -5,5 +5,7 @@
   overflow: hidden;
   margin: auto;
   aspect-ratio: 1;
+  position: relative;
+  z-index: 0;
   @include shadow.light-shadow();
 }
